ic-new-imgs-bib

--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -25,7 +25,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
-		<style>.image-wrapper::after{padding-bottom:calc((500/700)*100%)}</style><!-- Change -->
+		<style>.image-wrapper::after{padding-bottom:calc((524/698)*100%)}</style><!-- Change -->
 	</head>
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -61,11 +61,11 @@
 			<div id="overlay-menu" class="overlay" data-include="overlay"></div>
 		</header>
 
-		<main id="main" aria-labelledby=""><!-- Change -->
+		<main id="main" aria-labelledby="bibliography"><!-- Change -->
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_ZZZZ_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_ZZZZ_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_ZZZZ_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_ZZZZ_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_ZZZZ_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="A stack of books with titles related to this project's bibliography." /><!-- Change -->
+					<img width="698" height="524" src="/img/ivens-craft/liv_028110_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028110_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028110_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028110_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028110_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028110_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028110_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="A stack of books with titles related to this project's bibliography." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -76,9 +76,9 @@
 
 				<div>
 					<span>
-						<h2 id=""></h2><!-- Change -->
+						<h2 id="bibliography">Bibliography</h2><!-- Change -->
 						<ul class="publication-details">
-							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
+							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
 						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
 						<figcaption class="caption-icon desktop">
@@ -97,21 +97,21 @@
 
 					<section class="toc">
 						<ol aria-label="Menu">
-							<li><a href="#"></a></li><!-- Change -->
+							<li><a href="#bibliography">Bibliography</a></li><!-- Change -->
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
 					</section>
 
-					<section aria-labelledby=""><!-- Change -->
-						<h3 id=""></h3><!-- Change -->
+					<section aria-labelledby="bibliography"><!-- Change -->
+						<h3 id="bibliography">Bibliography</h3><!-- Change -->
 
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/.">https://onemorevoice.org/html/ivens-craft/.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> “Bibliography” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/.">https://onemorevoice.org/html/ivens-craft/ic-bibliography.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -123,7 +123,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, "Stack of Books," (Photograph, January 22, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph depicts a stack of books that represent just a handful of the rich literature on Black Victorians in the British empire. The authors and creators of the website strived to engage with this literature as a scholarly and historiographic practice for contextualizing William Ivens Craft's life and experiences.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph depicts a stack of books that represent just a handful of the rich literature on slavery and Black Victorians in the British empire. The authors and creators of the website strived to engage with this literature as a scholarly and historiographic practice for contextualizing William Ivens Craft's life and experiences.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
