--- a/html/ivens-craft/ic-atlantic_life.html
+++ b/html/ivens-craft/ic-atlantic_life.html
@@ -159,7 +159,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/item/2022647331/">High Holborn Street</a>” (Photograph, 1858-1875), Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s41176. Public Domain.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/item/2022647331/">High Holborn Street</a>” (Photograph, 1858-1875), Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s41176. Public domain.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This photograph depicts High Holborn Street in the London district of Holborn in the second half of the nineteenth century, as it might have looked when William Ivens Craft and Louisa Woodley Le Jeune married there in 1888.</p><!-- Change -->
 					</aside>
