--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -121,7 +121,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, "Stack of Books," (Photograph, January 22, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, ”Stack of Books,” (Photograph, January 22, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This photograph depicts a stack of books that represent just a handful of the rich literature on slavery and Black Victorians in the British empire. The authors and creators of the website strived to engage with this literature as a scholarly and historiographic practice for contextualizing William Ivens Craft's life and experiences.</p><!-- Change -->
 					</aside>
