--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Looking for Louisa Le Jeune Craft | One More Voice</title><!-- Change -->
-		<meta name="description" content="Illustrates how scholars can turn to family memories and histories to gain a glimpse of Louisa Le Jeune Craft, about whom few documents exist." /><!-- Change -->
+		<meta name="description" content="Illustrates how scholars can turn to family memories and histories to gain a glimpse of Louisa Le Jeune Craft about whom few documents exist." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#204A79"/>
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="434" src="/img/ivens-craft/liv_028108_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028108_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028108_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028108_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028108_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028108_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028108_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Old postcard image of a street with a large Church on one side and, a carriage, and people walking." /><!-- Change -->
+					<img width="698" height="434" src="/img/ivens-craft/liv_028108_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028108_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028108_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028108_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028108_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028108_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028108_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Old postcard with a street with a large church on one side, a carriage, and people walking." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -115,7 +115,8 @@
 
 						<p>Craft descendants recall that family lore had them believe William Ivens rescued a destitute Irish woman and her children from the streets of London. Historical records, specifically those letters held by the Bodleian Library, show us that it was in fact the other way around (Copeland and Copeland 2021). What the family story reflects, however, is how little is known or remembered about William Ivens’ wife. From extant records we see that Louisa, the daughter of John Gilbert Woodley, a gardener-turned-tailor, was born in Hackney around 1853 (“1861 England Census”; “Pallot’s Marriage Index” 1837). Likely named after her Tottenham-born mother, Louisa Spooner, Louisa and her family lived on Holly Street in Hackney throughout the 1850s. Located in north-east London, Hackney was far removed from the Craft home in Hammersmith lived in the 1850s. Though both came of age in London in the 1850s, it was unlikely William Ivens and Louisa crossed paths prior to 1882.</p>
 
-						<aside class="text-box">“The letters of William Ivens Craft held at the Bodleian “completely turned upside down… what we thought with William Ivens.” The story that the letters revealed was “such a revelation to the whole family.” - Eileen Copeland and Martin Copeland, William Ivens’ great-grandson (Copeland and COpeland 2022)</aside>
+						<aside class="text-box">The letters of William Ivens Craft held at the Bodleian “completely turned upside down [...] what we thought with William Ivens.” The story that the letters revealed was “such a revelation to the whole family.”<br/> 
+						<span class="right">– Eileen Copeland and Martin Copeland</span></aside>
 
 						<p>Louisa was sixteen years old at the time of her marriage to Felix Le Jeune in 1869. The young girl scribbled a wobbly “X” on the marriage certificate under Felix Le Jeune’s flourishing signature (“England Marriages and Banns” 1869). The Le Jeune family was able to afford servants in the 1870s, as indicated by a publicized incident. In 1878, Felix and Louisa took a servant of theirs, Annie Church, to court for stealing a gold ring worth six pounds. Louisa testified in court, claiming that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in <em>The Standard</em> (Anonymous 1878i).</p>
 
@@ -139,7 +140,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c. 1905), Wikimedia Commons. Creative Commons Attribution-Share Alike 2.0 Generic.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c. 1905), <em>Wikimedia Commons</em>. Creative Commons Attribution-Share Alike 2.0 Generic.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmod Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. This church no longer stands.</p><!-- Change -->
 					</aside>
