--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>New Family and New Loss | One More Voice</title><!-- Change -->
-		<meta name="description" content="Explains how William Ivens Craft's years spent as a father and husband might have been more financial secure, but they were not without loss and hardship." /><!-- Change -->
+		<meta name="description" content="Explains how William Ivens Craft's years spent as a father and husband might have been more financially secure, but they were not without loss and hardship." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#204A79"/>
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="524" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of six men standing in front of a wooden building flanked by two horse carts with men in them." /><!-- Change -->
+					<img width="698" height="524" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Six men standing in front of a wooden building flanked by two horse carts with men in them." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -144,7 +144,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This photograph shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. In the 1911 England Census, William Ivens listed his occupation as “coal agent,” and was still listed as such on his daughter's marriage record the following year. This image was likely captured around then.</p><!-- Change -->
 					</aside>
