--- a/html/ivens-craft/ic-growing_roots.html
+++ b/html/ivens-craft/ic-growing_roots.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="524" src="/img/ivens-craft/liv_028071_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028071_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028071_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028071_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028071_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028071_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028071_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of a street sign that reads 'Charlotte Street' on a brick building with a street lamp." /><!-- Change -->
+					<img width="698" height="524" src="/img/ivens-craft/liv_028071_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028071_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028071_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028071_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028071_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028071_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028071_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Street sign that reads ‘Charlotte Street‘ on a brick building with a street lamp." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -144,9 +144,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Charlotte Street” (Photograph, March 15, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Charlotte Street” (Photograph, March 15, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows the "Charlotte Street" sign, hanging next to an street lamp made to look like an old gas lamps. It was on this street, in 1882, where William Ivens decided to take cheaper lodgings and moved in with the Le Jeune family. It was also on this street, that he must have falled in love with Louisa Le Jeune.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows the ”Charlotte Street” sign, hanging next to an street lamp made to look like an old gas lamps. It was on this street, in 1882, where William Ivens decided to take cheaper lodgings and moved in with the Le Jeune family. It was also on this street, that he must have falled in love with Louisa Le Jeune.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
