--- a/html/ivens-craft/ic-project_introduction.html
+++ b/html/ivens-craft/ic-project_introduction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<title>Project Introduction | One More Voice</title><!-- Change -->
 		<meta name="description" content="Provides a brief summary of the “William Ivens Craft and the Transatlantic Victorian World” digital exhibit." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -114,7 +114,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Project Introduction” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-project_introduction.html">https://onemorevoice.org/html/ivens-craft/ic-project_introduction.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Project Introduction” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-project_introduction.html">https://onemorevoice.org/html/ivens-craft/ic-project_introduction.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -124,7 +124,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, "Claud Clark, Ellen Louisa Craft, baby William Claude Clark and others" (Photograph, c. 1913), Martin Copeland's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, "Claud Clark, Ellen Louisa Craft, baby William Claude Clark and others" (Photograph, c.1913), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This image from the early twentieth century shows a community coming together to seemily work on a home in Hounslow, London. Present in the photo are Claud Clark (leaning on a ladder), Ellen Louisa Craft (daughter of William Ivens, at the center of the three women), and William Claude Clark as a baby in a pram. The photo represents well the community, family, and legacy that William Ivens was able to create and leave behind--despite the many hardships he faced in his life.</p><!-- Change -->
 					</aside>
