--- a/html/ivens-craft/ic-transatlantic_family.html
+++ b/html/ivens-craft/ic-transatlantic_family.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<title>A Tightly-Knit Transatlantic Family | One More Voice</title><!-- Change -->
 		<meta name="description" content="Illuminates how the Crafts remained a closely knit family, even though the Atlantic Ocean stretched between them." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -136,7 +136,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “A Tightly-Knit Transatlantic Family” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-transatlantic_family.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_family.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “A Tightly-Knit Transatlantic Family” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-transatlantic_family.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_family.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -146,7 +146,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Street View of Vicarage Farm Road 2” (Photograph, March 18, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Street View of Vicarage Farm Road 2” (Photograph, March 18, 2023), Hope McCaffrey Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This photograph gives us a streetview of the last house that William Ivens Craft lived in with his family, on Vicarage Farm Road in Hounslow. The homes featured a cozy brick facade with red window trim and were called "Kiatta Villages." Although this was only one of many houses that William Ivens lived in throughout his life, that he lived here with his children and grandchildren made it home.</p><!-- Change -->
 					</aside>
