--- a/html/ivens-craft/ic-transatlantic_racism.html
+++ b/html/ivens-craft/ic-transatlantic_racism.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<title>Transatlantic Anti-Blackness | One More Voice</title><!-- Change -->
 		<meta name="description" content="Examines why William Ivens Craft struggled to subsist amidst the rigid class system of England, where he also faced a changing set of attitudes about race." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -149,7 +149,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Transatlantic Anti-Blackness” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-transatlantic_racism.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_racism.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Transatlantic Anti-Blackness” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-transatlantic_racism.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_racism.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -159,7 +159,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> London Stereoscopic Company, “<a aria-label="External Link" href="https://en.m.wikipedia.org/wiki/File:London_omnibus_in_1865.jpg">London Omnibus 1865</a>” (Photograph, 1865), Wikimedia Commons. Public Domain.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> London Stereoscopic Company, “<a aria-label="External Link" href="https://en.m.wikipedia.org/wiki/File:London_omnibus_in_1865.jpg">London Omnibus 1865</a>” (Photograph, 1865), <em>Wikimedia Commons</em>. Public domain.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This photograph of a packed omnibus likely resermbles the kind that William Ivens encountered during his first years back in his home country, when he worked as a messenger for the Railways & Metropolitan Omnibus Company.</p><!-- Change -->
 					</aside>
