--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<title>Looking for Louisa Le Jeune Craft | One More Voice</title><!-- Change -->
 		<meta name="description" content="Illustrates how scholars can turn to family memories and histories to gain a glimpse of Louisa Le Jeune Craft about whom few documents exist." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -130,7 +130,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Looking for Louisa Le Jeune Craft” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-looking_for_louisa.html">https://onemorevoice.org/html/ivens-craft/ic-looking_for_louisa.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Looking for Louisa Le Jeune Craft” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-24, <a href="/html/ivens-craft/ic-looking_for_louisa.html">https://onemorevoice.org/html/ivens-craft/ic-looking_for_louisa.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -140,7 +140,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c. 1905), <em>Wikimedia Commons</em>. Creative Commons Attribution-Share Alike 2.0 Generic.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c.1905), <em>Wikimedia Commons</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/deed.en">Creative Commons Attribution-Share Alike 2.0 Generic</a>.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmod Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. This church no longer stands.</p><!-- Change -->
 					</aside>
