--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -128,7 +128,8 @@
 
 						<p>Despite historians’ tendency to claim that history or knowledge has been lost (in order that they may rediscover it), the Craft story has always lived on in William and Ellen’s descendants. In England, Craft family history was relegated underground for a spell in the twentieth century, since Black ancestors were a mark of shame. In post-World War II London, explains Martin Copeland, the family lived in an area that was “99.9 percent white,” and they did not talk about their Black ancestry (Copeland and Copeland 2021).</p>
 
-						<aside class="text-box">“I was only 4 years old when I attended grandma’s funeral at Mortlake, but I can remember the flowers and the grief.” - Chris Clark, William Ivens’ great-grandson (Clark 2023d)</aside>
+						<aside class="text-box">“I was only 4 years old when I attended grandma’s funeral at Mortlake, but I can remember the flowers and the grief.”<br/> 
+						<span class="right">– Chris Clark, William Ivens’ great-grandson (Clark 2023d)</span></aside>
 
 						<p>Moreover, this genealogical amnesia may have also been purposeful, an attempt to protect the family during a time of anti-Black sentiment in England. Chris Clark guesses that his grandparents “conspired to ‘lose’ the family history of the fugitive slaves.” He adds: “I must say that they were remarkably successful in this” (Clark 2023a). And yet, Julia-Ellen Craft Davis, a great-granddaughter of William Ivens’ brother Charles, reminds us to be thankful that the effort “to hide the family’s ancestry in England was not completely successful” (Davis 2023).</p>
 
