--- a/html/ivens-craft/ic-transatlantic_racism.html
+++ b/html/ivens-craft/ic-transatlantic_racism.html
@@ -129,7 +129,7 @@
 
 						<p>Instead, William Ivens was an impoverished Black Briton in an expanding empire. The color line that Great Britain pushed further and further across the globe preferred to make William Ivens’ – and his Blackness – disappear (Lake and Reynolds 2008). Because race was not marked in the census or other bureaucratic papers, William Ivens and other Black Victorian English men and women were literally erased from the nation’s memory. Struggling to make enough money to board, eat, and find adequate clothing, William Ivens saw privation in front of him, and racism behind him.</p>
 
-						<aside class="text-box">“As I say, nothing was spoken about in this country, it was sort of hidden away a bit, really. Certainly, most of my family didn't even realize they had Black ancestors.” - Martin Copeland, William Ivens’ great-grandson (Copeland and Copeland 2022)</aside>
+						<aside class="text-box">“As I say, nothing was spoken about in this country, it was sort of hidden away a bit, really. Certainly, most of my family didn't even realize they had Black ancestors.” - Martin Copeland</aside>
 
 						<p>“As I say, nothing was spoken about in this country, it was sort of hidden away a bit, really,” recalls Martin Copeland, William Ivens’ great-grandson. “Certainly, most of my family didn't even realize they had Black ancestors” (Copeland and Copeland 2022). Struggling to make enough money to board, eat, and find adequate clothing, William Ivens saw privation in front of him, and racism behind him.</p>
 
