--- a/html/ivens-craft/ic-parents_escape.html
+++ b/html/ivens-craft/ic-parents_escape.html
@@ -149,7 +149,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Harper's Weekly, “<a aria-label="External Link" href="https://www.loc.gov/resource/cph.3b03062/">Market Scene in Macon, Georgia</a>” (Image, July 13, 1867) Library of Congress, Prints & Photographs Division, LC-USZ62-55173. No known restrictions on publication.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/resource/cph.3b03062/">Market Scene in Macon, Georgia</a>” (Image, July 13, 1867), Library of Congress, Prints & Photographs Division, LC-USZ62-55173. No known restrictions on publication.</p><!-- Change -->
 
 						<p><strong>Lead image commentary:</strong> This sketch illustration from <em>Harper's Weekly</em> paper depicts a market scene in Macon, Georgia, as it might have looked in the mid-nineteenth century when William Ivens Craft's parents, Ellen and William, were enslaved there. In 1848, William and Ellen decided to leave southern scenes such as this one and make their bid for freedom, so that their children might know freedom instead of slavery.</p><!-- Change -->
 					</aside>
