--- a/html/ivens-craft/ic-returning_south.html
+++ b/html/ivens-craft/ic-returning_south.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="437" src="/img/ivens-craft/liv_028024_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028024_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028024_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028024_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028024_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028024_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028024_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two men sit outside a log cabin while a woman stands in its doorway in this old photo." /><!-- Change -->
+					<img width="698" height="437" src="/img/ivens-craft/liv_028024_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028024_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028024_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028024_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028024_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028024_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028024_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two men sitting outside a log cabin with a woman standing in the doorway." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -159,9 +159,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Launey & Goebel Photographers, “<a aria-label="External Link" href="https://www.loc.gov/resource/ppmsca.39591/">African American Farmers in Georgia</a>” (Photograph, c.1867-1890),Library of Congress, Prints and Photographs Division, LC-DIG-ppmsca-39591. No known restrictions on publication.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Launey &amp; Goebel Photographers, “<a aria-label="External Link" href="https://www.loc.gov/resource/ppmsca.39591/">Savannah, Ga., Early Negro Life</a>” (Photograph, c.1867-1890), Library of Congress, Prints and Photographs Division, LC-DIG-ppmsca-39591. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This image depicts African American men and women outside a small farmhouse near Savannah, Georgia, during the era of Reconstruction. The Craft family, too, upon their return from England, passed the years of Reconstruction  near Savannah, Georgia, where they sought to provide education and otherwise help 'uplift' newly freedpeople in the American South.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image depicts men and women outside a small farmhouse near Savannah, Georgia, during the era of Reconstruction. The Craft family, too, upon their return from England, passed the years of Reconstruction  near Savannah, Georgia, where they sought to provide education and otherwise help 'uplift' newly freedpeople in the American South.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
