--- a/html/ivens-craft/ic-project_introduction.html
+++ b/html/ivens-craft/ic-project_introduction.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="537" src="/img/ivens-craft/liv_028032_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028032_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028032_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028032_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028032_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028032_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028032_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of people standing in front of a house with a fence, with men on ladders and a baby in a pram." /><!-- Change -->
+					<img width="698" height="537" src="/img/ivens-craft/liv_028032_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028032_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028032_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028032_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028032_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028032_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028032_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Group of people standing in front of a house with a fence, with men on ladders and a baby in a pram." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -124,9 +124,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, "Claud Clark, Ellen Louisa Craft, baby William Claude Clark and others" (Photograph, c.1913), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, "Group of People Including Claud Clark, Ellen Louisa Craft, and William Claude Clark (in Pram)" (Photograph, c.1913), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This image from the early twentieth century shows a community coming together to seemily work on a home in Hounslow, London. Present in the photo are Claud Clark (leaning on a ladder), Ellen Louisa Craft (daughter of William Ivens, at the center of the three women), and William Claude Clark as a baby in a pram. The photo represents well the community, family, and legacy that William Ivens was able to create and leave behind--despite the many hardships he faced in his life.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image from the early twentieth century shows a community coming together to seemily work on a home in Hounslow, London. Present in the photo are Claud Clark (leaning on a ladder), Ellen Louisa Craft (daughter of William Ivens, at the center of the three women), and William Claude Clark as a baby in a pram. The photo represents well the community, family, and legacy that William Ivens was able to create and leave behind – despite the many hardships he faced in his life.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
