make folklore image undownloadable

--- a/html/materials/victorian_folklore.html
+++ b/html/materials/victorian_folklore.html
@@ -62,7 +62,8 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="" height="" src="/img/main-pages/liv_023044_0001_deriv-1396px.jpg" srcset="/img/main-pages/liv_023044_0001_deriv-318px.jpg 318w, /img/main-pages/liv_023044_0001_deriv-478px.jpg 478w, /img/main-pages/liv_023044_0001_deriv-636px.jpg 636w, /img/main-pages/liv_023044_0001_deriv-698px.jpg 698w, /img/main-pages/liv_023044_0001_deriv-956px.jpg 956w, /img/main-pages/liv_023044_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two creatures with the respective faces of a cat and owl flying in a star-strewn night sky." />
+					<img width="698" height="628" src="/img/main-pages/liv_023044_0001_deriv-1396px.jpg" srcset="/img/main-pages/liv_023044_0001_deriv-318px.jpg 318w, /img/main-pages/liv_023044_0001_deriv-478px.jpg 478w, /img/main-pages/liv_023044_0001_deriv-636px.jpg 636w, /img/main-pages/liv_023044_0001_deriv-698px.jpg 698w, /img/main-pages/liv_023044_0001_deriv-956px.jpg 956w, /img/main-pages/liv_023044_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Two creatures with the respective faces of a cat and owl flying in a star-strewn night sky." oncontextmenu="return false;" />
+					<!-- coding to prevent download of image created by perplexity.ai (https://www.perplexity.ai/search/I-have-an-ExqCprxJRTOh75WXL1q58w?s=c) -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
